Bug 1129526 - Make the RenderFrameParent put focus on the correct OOP child before delivering a click event to it. r=botond